welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: value =< is not a member of Int
 if (12<a && a=<19 && 13<b && b>=19 || 12<b && b=<19 && 13<a && a>=19) 
              ^